设备上线、下线

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,6 +33,7 @@ spring.mqtt.username=admin
 spring.mqtt.password=public
 spring.mqtt.url=tcp://127.0.0.1:1883
 spring.mqtt.client-id=test
-spring.mqtt.default-topic=test/#
+spring.mqtt.default-topic=#
+spring.mqtt.sys-topic=$SYS/brokers/+/clients/#
 spring.mqtt.timeout=100
 spring.mqtt.keepalive=100
