--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.port=8080
 ########################################################
 spring.datasource.url=jdbc:mysql://localhost:3306/iot_platform?useSSL=false&useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 ########################################################
 ### Java Persistence Api
